fixed sun logo on dark mode toggle and updated image

--- a/styles/Toggle.module.css
+++ b/styles/Toggle.module.css
@@ -79,14 +79,6 @@
 
 .moon {
   color: #e2e8ec;
-  width: 18px;
-  height: 18px;
-}
-
-.sun,
-.sunmobile {
-  width: 18px;
-  height: 18px;
 }
 
 .sun {
